WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281579
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-column-row-gap-004.html
https://bugs.webkit.org/show_bug.cgi?id=281579
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-column-row-...
alan
Reported
2024-10-16 08:44:27 PDT
ssia
Attachments
[fast-cq]Patch
(9.34 KB, patch)
2024-10-16 08:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-16 08:48:20 PDT
Created
attachment 472954
[details]
[fast-cq]Patch
EWS
Comment 2
2024-10-17 06:00:53 PDT
Committed
285332@main
(f900af1468bb): <
https://commits.webkit.org/285332@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472954
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-10-17 06:01:16 PDT
<
rdar://problem/138107866
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug