[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flexbox-column-row-gap-004.html https://bugs.webkit.org/show_bug.cgi?id=281579

Reviewed by Antti Koivisto.

Take flex direction into account (column vs. row) when computing the main/cross axis gaps.
Column and row gaps are meant to introduce spacing in inline and block directions respectively.
(This may need further adjustment when adding support for writing modes.)

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp:
(WebCore::Layout::FlexFormattingUtils::mainAxisGapValue):
(WebCore::Layout::FlexFormattingUtils::crossAxisGapValue):
(WebCore::Layout::FlexFormattingUtils::rowGapValue): Deleted.
(WebCore::Layout::FlexFormattingUtils::columnGapValue): Deleted.
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.h:
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::layout):
(WebCore::Layout::FlexLayout::computeFlexLines const):
(WebCore::Layout::FlexLayout::mainAxisAvailableSpaceForItemAlignment const):
(WebCore::Layout::FlexLayout::crossAxisAvailableSpaceForLineSizingAndAlignment const):

Canonical link: https://commits.webkit.org/285332@main